--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "tailwindcss-animated": "^1.0.1"
   }
 }
