--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,5 +11,4 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run script file
       run: |
-         echo "test"
-      shell: bash
+         echo "test the manual.yml on log"
