--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,13 +17,13 @@ jobs:
 
     - name: Modify README, commit, and push
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TARGET_REPO_TOKEN: ${{ secrets.TARGET_REPO_TOKEN }}
       run: |
         cd /tmp/apple-accessories
         git config user.name "GitHub Actions Bot"
-        git config user.email "<>"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
         git checkout -b test-text
         echo "This is a new line added by GitHub Actions" | cat - README.md > temp && mv temp README.md
         git add README.md
         git commit -m "feat: add text in readme"
-        git push "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/ooospooky/apple-accessories.git" HEAD:test-text -f
+        git push "https://x-access-token:$TARGET_REPO_TOKEN@github.com/ooospooky/apple-accessories.git" HEAD:test-text -f
