--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,7 +23,7 @@ jobs:
         git config user.name "GitHub Actions Bot"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git checkout -b test-text
-        echo "This is a new line added by GitHub Actions" | cat - README.md > temp && mv temp README.md
+        echo "This is a new line added by GitHub Actions!!" | cat - README.md > temp && mv temp README.md
         git add README.md
         git commit -m "feat: add text in readme"
-        git push "https://x-access-token:$TARGET_REPO_TOKEN@github.com/ooospooky/apple-accessories.git" HEAD:test-text -f
+        git push origin test-text
