--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,4 +31,4 @@ jobs:
         echo "This is a new line added by GitHub Actions!!" | cat - README.md > temp && mv temp README.md
         git add README.md
         git commit -m "feat: add text in readme"
-        git push origin test-text -f 
+        git push https://x-access-token:${{ secrets.PAT }}@github.com/ooospooky/apple-accessories.git test-text
