--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,7 +33,7 @@ jobs:
         
     - name: Push changes
       run: |
-        git push https://x-access-token:${{ secrets.PAT }}@github.com/ooospooky/apple-accessories.git test-text
+        git push -u https://x-access-token:${{ secrets.PAT }}@github.com/ooospooky/apple-accessories.git test-text
       # uses: ad-m/github-push-action@v0.8.0
       # with:
       #   github_token: ${{ secrets.PAT }}
