--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,9 +1,7 @@
 name: Test GitHub Actions
-
 on:
   workflow_dispatch:
     # This allows manual triggering
-
 jobs:
   test-clone-and-modify:
     runs-on: ubuntu-latest
@@ -15,11 +13,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.PAT }}
-
     - name: Clone another repository
       run: |
         git clone https://github.com/ooospooky/apple-accessories.git /tmp/apple-accessories
-
     - name: Modify README, commit, and push
       run: |
         cd /tmp/apple-accessories
@@ -30,12 +26,7 @@ jobs:
         git add README.md
         git commit -m "feat: add text in readme"
         git branch
-        
     - name: Push changes
       run: |
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-        git push
-      # uses: ad-m/github-push-action@v0.8.0
-      # with:
-      #   github_token: ${{ secrets.PAT }}
-      #   branch: test-text
+        git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/ooospooky/apple-accessories.git
+        git push origin test-text
