--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,14 +1,35 @@
 name: Test GitHub Actions
-
 on:
   workflow_dispatch:
     # This allows manual triggering
-
 jobs:
-  run_tests:
-    runs-on: ubuntu-20.04
+  test-clone-and-modify:
+    runs-on: ubuntu-latest
+    permissions:               
+      contents: write          
+      pull-requests: write  
     steps:
-    - uses: actions/checkout@v2
-    - name: Run script file
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.PAT }}
+
+    - name: Clone another repository
       run: |
-         echo "test the manual.yml on log"
+        git clone https://github.com/ooospooky/apple-accessories.git /tmp/apple-accessories
+
+    - name: Modify README, commit, and push
+      run: |
+        cd /tmp/apple-accessories
+        git config user.name "GitHub Actions Bot"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git checkout -b test-text
+        echo "This is a new line added by GitHub Actions!!" | cat - README.md > temp && mv temp README.md
+        git add README.md
+        if git diff-index --quiet HEAD --; then
+          echo "No changes to commit"
+        else
+          git commit -m "feat: add text in readme"
+          git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/ooospooky/apple-accessories.git
+          git push origin test-text
+        fi
