--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,9 +5,9 @@ on:
 jobs:
   test-clone-and-modify:
     runs-on: ubuntu-latest
-    permissions:               
-      contents: write          
-      pull-requests: write  
+    # permissions:               
+    #   contents: write          
+    #   pull-requests: write  
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
