--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-js": "^2.1.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@xstate/react": "^5.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
@@ -25,12 +25,12 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^12.18.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "xstate": "^5.19.2"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
