--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@typescript-eslint/parser": "^8.32.1",
     "@xstate/react": "^5.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
-    "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "^13.4.9",
     "postcss": "8.4.25",
@@ -34,6 +34,21 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.2.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-compat": "^6.0.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prefer-arrow-functions": "3.4.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.5.3",
+    "stylelint": "^16.19.1",
+    "stylelint-config-standard": "^38.0.0",
     "tailwindcss-animated": "^1.0.1"
   }
 }
